Fixing RHD-266 (filters for solutions learn pages)
This isn't working yet, Wes is going to take a look.

--- a/solutions/devops/_common/solution.yml
+++ b/solutions/devops/_common/solution.yml
@@ -2,7 +2,7 @@ name: DevOps
 sub_title: Innovate at the speed of open source with DevOps
 long_description: Get the tools, the automation and the context you'll need to embrace DevOps
 icon: icon-rh-icon-cloud-admin
-buzz_tags:
+tags:
   - DevOps
   - CI
   - CD
