--- a/solutions/enterprise-java/_common/solution.yml
+++ b/solutions/enterprise-java/_common/solution.yml
@@ -2,5 +2,5 @@ name: Enterprise Java
 sub_title: Lorem ipsum dolor sit amet
 long_description: Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation
 icon: icon-rh-icon-cloud-admin
-buzz_tags:
+tags:
   - Enterprise Java
