--- a/solutions/mobile/_common/solution.yml
+++ b/solutions/mobile/_common/solution.yml
@@ -2,7 +2,7 @@ name: Mobile
 sub_title: Enterprise Mobile Made Easy with Red Hat
 long_description: Build and deploy enterprise-grade mobile applications that securely integrate with backend systems  with Red Hat Mobile Application Platform
 icon: icon-rh-icon-smart-phone
-buzz_tags:
+tags:
   - Mobile
   - mobile application platform
   - enterprise mobile applications
