--- a/solutions/web-and-api-development/_common/solution.yml
+++ b/solutions/web-and-api-development/_common/solution.yml
@@ -2,5 +2,5 @@ name: Web and API Development
 sub_title: Lorem ipsum dolor sit amet
 long_description:
 icon: icon-rh-icon-office-building-smb
-buzz_tags:
+tags:
   - Web and API Development
